# llm-computer

./: .gitignore  README.md  pyproject.toml
docs/: article-example-validation.json  article-example-validation.md  benchmark-results.md  five-implementations-article.md  five-implementations-article.zh-CN.md  five-way-comparison.json  five-way-comparison.md  gemini-integration.md  model-integration-plan.md  open-source-selection.md  qwen-transformers-integration.md  runtime-validation.md  service-protocol.md  stage-validation-log.md  sudoku-result-validation.json  sudoku-result-validation.md  transformer-alignment.md
scripts/: stage0_semantic_core.sh  stage10_five_way_comparison.sh  stage11_article_examples.sh  stage12_sudoku_result_validation.sh  stage13_transformer_execution_block.sh  stage14_article_storytelling.sh  stage1_shared_sidecar.sh  stage2_open_source_baseline.sh  stage3_uv_and_gemini.sh  stage4_qwen_sidecar.sh  stage5_qwen_boundary_interception.sh  stage6_qwen_structured_capture.sh  stage7_qwen_structured_prompt_mode.sh  stage8_qwen_prefilled_structured_mode.sh  stage9_qwen_execution_block.sh
src/llm_computer/: __init__.py  __main__.py  article_examples.py  article_story.py  comparison.py  examples.py  executor.py  gemini_cli.py  gemini_integration.py  hull.py  integration.py  protocol.py  qwen_cli.py  qwen_transformers.py  service.py  sudoku_validation.py  transformer.py  wasm.py
tests/: test_article_examples.py  test_article_story.py  test_comparison.py  test_executor.py  test_gemini_integration.py  test_integration.py  test_qwen_transformers.py  test_service.py  test_sudoku_validation.py  test_transformer.py
visuals/remotion/: package-lock.json  package.json
visuals/remotion/src/: Figures.jsx  Overview.jsx  Root.jsx  generated-data.js
