[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-computer"
version = "0.1.0"
description = "Article-driven reimplementation of a 2D hull-based LLM executor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
transformers = [
    "accelerate>=0.30.0",
    "torch>=2.2.0",
    "transformers>=4.51.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
