[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-computer"
version = "0.1.0"
description = "Article-driven reimplementation of a 2D hull-based LLM executor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
llm-computer = "llm_computer.__main__:main"
llm-computer-qwen = "llm_computer.qwen_cli:main"
llm-computer-gemini = "llm_computer.gemini_cli:main"
llm-computer-compare = "llm_computer.comparison:main"
llm-computer-article-examples = "llm_computer.article_examples:main"
llm-computer-sudoku-validate = "llm_computer.sudoku_validation:main"
llm-computer-article-story = "llm_computer.article_story:main"

[project.optional-dependencies]
transformers = [
    "accelerate>=0.30.0",
    "torch>=2.2.0",
    "transformers>=4.51.0",
]
gemini = [
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
